feat: Calculate average for response and rename to pairType
