# server/transport/openapi/api/model_board_paired_type.go
@@ -1,19 +1,0 @@
-/*
- * flop-strategy
- *
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * API version: 1.0.0
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
- */
-
-package api
-
-type BoardPairedType string
-
-// List of BoardPairedType
-const (
-	BOARD_PAIRED_TYPE_UNPAIRED BoardPairedType = "BoardPairedTypeUnpaired"
-	BOARD_PAIRED_TYPE_PAIRED   BoardPairedType = "BoardPairedTypePaired"
-	BOARD_PAIRED_TYPE_TRIPS    BoardPairedType = "BoardPairedTypeTrips"
-)
